-- Copyright © 2015 Benjamin Barenblat
--
-- Licensed under the Apache License, Version 2.0 (the "License"); you may not
-- use this file except in compliance with the License.  You may obtain a copy
-- of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
-- License for the specific language governing permissions and limitations
-- under the License.

name:                jarvis
version:             0.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             Apache-2.0
license-file:        LICENSE
copyright:           © 2015 Benjamin Barenblat
author:              Benjamin Barenblat
maintainer:          bbaren@mit.edu
stability:           alpha
synopsis:            asynchronous interactive shell
category:            System
tested-with:         GHC==7.6.3

executable jarvis
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.6 && <4.7
                     , data-default-class >=0.0.1 && <0.1
                     , vty >=5.2.3 && <5.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- extensions:          
  -- other-extensions:    
  ghc-options:         -Wall
                       -fwarn-type-defaults
                       -fwarn-name-shadowing
                       -fwarn-missing-signatures
                       -fwarn-orphans
                       -fwarn-unused-do-bind
                       -threaded
                       -with-rtsopts=-N
